Look for uuid.dat only in explicitly given path
This path can be specified on the command line or in the config file,
but it has to be specified.  We no longer just try the various config
directories.

--- a/pyfarm/agent/etc/agent.yml
+++ b/pyfarm/agent/etc/agent.yml
@@ -173,3 +173,10 @@ sysinfo_command_lspci:
   - /sbin/lspci
   - /usr/sbin/lspci
   - /usr/bin/lspci
+
+# The full path where we save our UUID, with different possible settings for
+# different OS types
+uuid_path_linux: /etc/pyfarm/agent/uuid.dat
+uuid_path_bsd: /etc/pyfarm/agent/uuid.dat
+uuid_path_windows: '%LOCALAPPDATA%\pyfarm\agent\uuid.dat'
+uuid_path_mac: /Library/pyfarm/agent/uuid.dat
